-----------------------------------------------------
-Now you can show area selected example A1:B5
(idea given by jp.martin <jpmartin@iroise.com> thanks )
-Now there is LC mode => you can show area selected 
as 3Lx5C, L1C1 (A1)
-bug fix
-Now you can resize differents row or column
icon lo22-action-adjustrow.png lo22-action-adjustcol.png
lo22-action-middle.png,lo22-action-top.png,lo22-action-bottom.png
created by jp.martin <jpmartin@iroise.com> thanks
-Improved kspread_dlg_resize
-start to replace QMessageBox by KMessageBox

2000-05-07 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add two functions upper,lower and increase size font,decrease size font
but it's optional icon.
You can add them with kedittoolbar
lo22-action-upper.png lo22-action-fontsizedown.png lo22-action-fontsizeup.png
lo22-action-lower.png lo22-action-resizecol.png lo22-action-resizerow.png
icons created by jp.martin <jpmartin@iroise.com> thanks
bug fix
Replace all QMessageBox by KMessageBox

2000-05-08 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can show column number
=>replace A B C ... by 1 2 3 ... 
-Add function equalize row and equalize column
=>used width ou height max

2000-05-11 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now when you resize row or column you can show its size.
-Add new help formula in kspread_dlg_formula.

2000-05-12 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now I created a new dialog box "Preference" 
move "show grid","show formular","LC mode","Column number" into
this dialog box
-Bug fix

2000-05-14 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-bug fix
-add icons improved by jp.martin <jpmartin@iroise.com> thanks
bold,italic,multirow,underline etc... thanks a lot.
