@@ -119,6 +119,7 @@
  <Action name="bold"/>
  <Action name="italic"/>
  <Action name="underline"/>
+ <Action name="strikeout"/>
  <Action name="selectFont"/>
  <Action name="selectFontSize"/>
 </ToolBar>
