@@ -362,7 +362,8 @@ public:
     void setSelection( const QRect &_rect, KSpreadCanvas *_canvas = 0L );
 
     void setSelectionFont( const QPoint &_marker, const char *_font = 0L, int _size = -1,
-			   signed char _bold = -1, signed char _italic = -1, signed char _underline = -1 );
+			   signed char _bold = -1, signed char _italic = -1, signed char _underline = -1,
+                           signed char _strike = -1 );
     void setSelectionMoneyFormat( const QPoint &_marker,bool b );
     void setSelectionAlign( const QPoint &_marker, KSpreadLayout::Align _align );
     void setSelectionAlignY( const QPoint &_marker, KSpreadLayout::AlignY _alignY );
