@@ -208,6 +208,7 @@ public slots:
     void bold( bool b );
     void italic( bool b );
     void underline( bool b );
+    void strikeOut( bool b );
     void deleteColumn();
     void deleteRow();
     void insertColumn();
@@ -369,6 +370,7 @@ private:
     KToggleAction* m_bold;
     KToggleAction* m_italic;
     KToggleAction* m_underline;
+    KToggleAction* m_strikeOut;
     KToggleAction* m_percent;
     KAction* m_precplus;
     KAction* m_precminus;
