@@ -508,3 +508,6 @@ this dialog box
 -add icons improved by jp.martin <jpmartin@iroise.com> thanks
 bold,italic,multirow,underline etc... thanks a lot.
 
+2000-05-16 -Montel laurent <montell@club-internet.fr>
+-----------------------------------------------------
+-Now you can strike out the text
